--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -37,6 +37,7 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="~/jquery/jquery.min.js"></script>
     <script src="~/js/chat_input.js"></script>
+    <script src="~/js/inputfile.js"></script>
 
 </body>
 </html>
