--- a/_Imports.razor
+++ b/_Imports.razor
@@ -13,3 +13,4 @@
 @using Chat.Services;
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.EntityFrameworkCore;
+@using Microsoft.AspNetCore.Hosting;
