--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,8 +23,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Chat
+            <NavLink class="nav-link" href="groupchats">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Chats
             </NavLink>
         </li>
     </ul>
