added font-awesome | added event Change Message

--- a/Pages/GroupChatsComponent.razor
+++ b/Pages/GroupChatsComponent.razor
@@ -5,24 +5,14 @@
 @inject NavigationManager NavigationManager
 <h3>GroupChatsComponent</h3>
 
-<ul class="list-group">
+<ul class="list-group" style="width: 500px;">
     @foreach (var chat in groupChats)
     {
-        <li class="list-group-item">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
             @{ var groupusers = chat.ChatUsers.Select(cu => cu.User).ToList(); }
-            @chat.Id
-            <button type="button" class="btn btn-primary btn-lg" @onclick="@(e => OpenChat(chat))">Открыть беседу</button>
-            @if (groupusers.Count > 0)
-            {
-                <ul class="list-group">
-                    @foreach (var user in groupusers)
-                    {
-                        <li class="list-group-item">
-                            @user.UserName
-                        </li>
-                    }
-                </ul>
-            }
+            @chat.Name
+            <button type="button" class="btn btn-outline-dark" @onclick="@(e => OpenChat(chat))">Открыть беседу</button>
+            <span class="badge badge-primary badge-pill">@chat.ChatUsers.Count</span>
 
 
         </li>
@@ -30,25 +20,23 @@
 </ul>
 
 @code {
-    List<GroupChat> groupChats = new List<GroupChat>();
 
-    protected override async Task OnInitializedAsync()
-    {
-        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-        var claimUser = authState.User;
-        var user123 = await _userManager.GetUserAsync(claimUser);
-        var user = _db.Users.Include(u => u.ChatUsers).ThenInclude(cu => cu.GroupChat).ToList().FirstOrDefault(u => u.UserName == claimUser.Identity.Name);
-        var user2 = _db.Users.FirstOrDefault(u => u.UserName == claimUser.Identity.Name);
-        Console.WriteLine($"################# {user == user2} {user123 == user2} {user123 == user} #####################################");
-        //var azaz = _db.GroupChats.Include();
-        groupChats = user.ChatUsers.Select(cu => cu.GroupChat).ToList();
-        //groupChats = _db.Users.Where(g => g.ChatUsers.Any(u => u.UserName == user.Identity.Name)).ToList();
-        Console.WriteLine($"count {groupChats.Count} #####################################");
-    }
 
-    public void OpenChat(GroupChat chat)
-    {
-        NavigationManager.NavigateTo($"chat/{chat.Id}/", true);
 
-    }
+
+List<GroupChat> groupChats = new List<GroupChat>();
+
+protected override async Task OnInitializedAsync()
+{
+    var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+    var claimUser = authState.User;
+    var user = _db.Users.Include(u => u.ChatUsers).ThenInclude(cu => cu.GroupChat).ToList().FirstOrDefault(u => u.UserName == claimUser.Identity.Name);
+    groupChats = user.ChatUsers.Select(cu => cu.GroupChat).ToList();
+}
+
+public void OpenChat(GroupChat chat)
+{
+    NavigationManager.NavigateTo($"chat/{chat.Id}/", true);
+
+}
 }
