--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,6 +13,7 @@
     <title>Chat</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/font-awesome/css/all.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="~/css/Textcss.css" />
@@ -36,6 +37,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="~/jquery/jquery.min.js"></script>
+    <script src="~/font-awesome/js/all.min.js"></script>
     <script src="~/js/chat_input.js"></script>
     <script src="~/js/inputfile.js"></script>
 
