--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="users">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create Chat
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="groupchats">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Chats
             </NavLink>
