--- a/Pages/ChatComponent.razor
+++ b/Pages/ChatComponent.razor
@@ -13,18 +13,34 @@
 @inject IJSRuntime JsRuntime;
 @implements IDisposable
 @**
-    <head>
-        <link rel="stylesheet" href="~/css/Textcss.css" />
-        <link rel="stylesheet" href="~/css/ChatDes.css" />
-    </head>
-**@
+        <head>
+            <link rel="stylesheet" href="~/css/Textcss.css" />
+            <link rel="stylesheet" href="~/css/ChatDes.css" />
+        </head>
+    **@
 <AuthorizeView>
     <Authorized>
-        <button type="button" class="btn btn-lg btn-primary"   @onclick="@RemoveSelectedMessages">remove Message</button>
-        <h2 class="text-center text-primary"> Chat </h2>
+        <h2 class="text-center text-primary"> Chat: @(groupChat?.Name)</h2>
         <div class="container ">
+            @if (groupChat != null)
+            {
+                @:Users:
+                <p>
+
+                    @foreach (var chatUser in groupChat?.ChatUsers)
+                    {
+                        @chatUser.User.UserName
+                        <br />
+                    }
+                </p>
+            }
+
+
             <div class="row ">
-                <div class="col-md-3"></div>
+                <div class="col-md-3" style="margin-bottom: 10px;">
+                    <button type="button" class="btn btn-outline-info @(Messages.Any(m => m.Selecting) ? "":"mydisable")" @onclick="@RemoveSelectedMessages">remove Message</button>
+                    <button type="button" class="btn btn-outline-dark" @onclick="LogOut">log out of chat</button>
+                </div>
                 <div class="col-md-6  " id="chat">
                     @if (Messages != null)
                     {
@@ -49,7 +65,12 @@
                                 {
                                     contcolor = message.Selecting ? "bg-info" : "bg-primary";
                                     <div class="container darker @contcolor" @onclick="@(e => SelectMessage(message))">
-                                        <p class="sender text-left text-white message-sender">@message.UserName</p>
+                                        <p class="sender text-left text-white message-sender">
+                                            @message.UserName
+                                            <div class="float-right" @onclick="@(e => StartEditMessage(message))" @onclick:stopPropagation="true">
+                                                <i class="fas fa-edit fa-lg"></i>
+                                            </div>
+                                        </p>
                                         <div class="text-left text-white message-text">@MarkdownParser.Parse(message.Text)</div>
                                         <span class="time-left text-light">@message.When.ToString()</span>
                                     </div>
@@ -64,19 +85,11 @@
                                 }
                             }
                         }
-
-                        @*
-            <div class="row">
-                <div class="container">
-                    <p class="sender text-center">Admin</p>
-                    <p class="text-center">Welcome to chat! @userName</p>
-                </div>
-            </div>
-                        *@
                     }
                 </div>
             </div>
             <div class="col-md-12">
+                <button type="button" class="btn btn-secondary @(IsEditing ? "":"mydisable")" style="margin-bottom: 10px;" @onclick="@StopEditMessage">stop change</button>
                 <form method="post" action="#" enctype="multipart/form-data">
                     <label class="fileContainer mydisable" id="fileSelectBox" ondragleave="leaveDrop2(event)" ondrop="onDrop(event)" ondragover="dragOver(event)">
                         <InputFile multiple OnChange="ViewFile" />
@@ -84,6 +97,7 @@
                 </form>
                 <textarea id="chatSend" class="form-control" style="resize:none;" name="chat_message" ondragover="dragOver2(event)" placeholder="Send a message" rows="3" @bind-value="@newMessage" @bind-value:event="oninput"></textarea>
                 <input type="submit" id="mybutton" @onclick="SendAll" class="btn btn-outline-primary btn-block" />
+                <div id="mylastpage"></div>
             </div>
         </div>
     </Authorized>
@@ -108,6 +122,9 @@
     public string newMessage { get; set; } = null;
     string userName { get; set; } = null;
 
+    private bool IsEditing { get; set; }
+    private Message EditingMessage { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
@@ -116,8 +133,9 @@
         {
             user = _chatService.user;
             groupChat = _chatService.groupChat;
-            groupChat.Sent += GetMessage;
-            groupChat.Updated += UpdateMessages;
+            groupChat.Sent += GotMessage;
+            groupChat.Updated += UpdatedMessages;
+            groupChat.ChangedMessage += ChangedMessage;
             Messages = _chatService.LocalMessages;
 
         }
@@ -129,8 +147,9 @@
     {
         if (groupChat != null)
         {
-            groupChat.Sent -= GetMessage;
-            groupChat.Updated -= UpdateMessages;
+            groupChat.Sent -= GotMessage;
+            groupChat.Updated -= UpdatedMessages;
+            groupChat.ChangedMessage -= ChangedMessage;
         }
     }
 
@@ -144,29 +163,42 @@
 
 
 
-
-
-    public async Task SendAll(MouseEventArgs e)
-    {
-        _chatService.SendMessage(newMessage, user);
-        newMessage = null;
-
-    }
-
-    public void GetMessage(Message newMessage)
+    public void GotMessage(Message newMessage)
     {
         _chatService.GotMessage(newMessage);
         InvokeAsync(StateHasChanged);
     }
 
-    public void UpdateMessages(List<Message> removeMessages)
+    public void UpdatedMessages(List<Message> removeMessages)
     {
-        _chatService.UpdateMessages(removeMessages);
+        _chatService.RemovedSelectedMessages(removeMessages);
         Messages = _chatService.LocalMessages;
         InvokeAsync(StateHasChanged);
     }
 
+    public void ChangedMessage(string textMessage, Message editingMessage)
+    {
+        _chatService.ChangedMessage(textMessage, editingMessage);
+        InvokeAsync(StateHasChanged);
+    }
 
+
+
+    public async Task SendAll(MouseEventArgs e)
+    {
+        if (!String.IsNullOrWhiteSpace(newMessage))
+        {
+            if (IsEditing)
+            {
+                _chatService.ChangeMessage(newMessage, EditingMessage);
+                IsEditing = false;
+            }
+            else
+                _chatService.SendMessage(newMessage, user);
+            newMessage = null;
+            SetFocus();
+        }
+    }
 
     public void SelectMessage(Message message)
     {
@@ -175,8 +207,40 @@
 
     public void RemoveSelectedMessages()
     {
+        IsEditing = false;
+        newMessage = null;
         _chatService.RemoveSelectedMessages();
+        SetFocus();
     }
+
+    public void LogOut()
+    {
+        _chatService.LogOutFromChat();
+        NavigationManager.NavigateTo("");
+    }
+
+    public void StartEditMessage(Message message)
+    {
+        IsEditing = true;
+        EditingMessage = message;
+        newMessage = EditingMessage.Text;
+        SetFocus();
+    }
+
+    public void StopEditMessage()
+    {
+        IsEditing = false;
+        newMessage = null;
+    }
+
+    public async void SetFocus()
+    {
+        await JsRuntime.InvokeAsync<object>("setFocusToTextBox");
+    }
+
+
+
+
 
 
 
