--- a/_Imports.razor
+++ b/_Imports.razor
@@ -14,3 +14,4 @@
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.EntityFrameworkCore;
 @using Microsoft.AspNetCore.Hosting;
+@using Amazon.S3;
