--- a/wwwroot/css/Textcss.css
+++ b/wwwroot/css/Textcss.css
@@ -1,9 +1,1 @@
-﻿body {
-    font-family: Verdana, Arial, Sans-Serif;
-    font-size: medium;
-}
-
-.textIntroduction {
-    padding: 100px;
-    text-align: center;   
-}
+﻿
