--- a/Pages/ChatComponent.razor
+++ b/Pages/ChatComponent.razor
@@ -46,7 +46,7 @@
                 <div class="col-md-6  " id="chat">
                     @if (Messages != null)
                     {
-                        string containerClass, timePosition, textAlign, contcolor;
+                        string contcolor;
                         @foreach (var message in Messages.OrderBy(m => m.When))
                         {
 
@@ -56,25 +56,14 @@
                                 <div class="container darker @contcolor" @onclick="@(e => SelectMessage(message))">
                                     <p class="sender text-left text-white message-sender">
                                         @message.UserName
-                                        @if (!message.IsImage)
+                                        @if (!message.IsFile)
                                         {
                                             <div class="float-right" @onclick="@(e => StartEditMessage(message))" @onclick:stopPropagation="true">
                                                 <i class="fas fa-edit fa-lg"></i>
                                             </div>
                                         }
                                     </p>
-                                    @if (message.IsImage)
-                                    {
-                                        <div class="text-left text-white message-text">
-                                            <img src="@message.Text">
-                                        </div>
-
-                                    }
-                                    else
-                                    {
-                                        <div class="text-left text-white message-text">@MarkdownParser.Parse(message.Text)</div>
-                                    }
-
+                                    <div class="text-left text-white message-text " @onclick:stopPropagation>@ChatHelper.ConvertUrl(message)</div>
                                     <span class="time-left text-light">@message.When.ToString()</span>
                                 </div>
                             }
@@ -82,17 +71,7 @@
                             {
                                 <div class="container bg-light">
                                     <p class="sender text-left message-sender">@message.UserName</p>
-                                    @if (message.IsImage)
-                                    {
-                                        <div class="text-left text-white message-text">
-                                            <img src="@message.Text">
-                                        </div>
-
-                                    }
-                                    else
-                                    {
-                                        <div class="text-left text-white message-text">@MarkdownParser.Parse(message.Text)</div>
-                                    }
+                                    <div class="text-left text-dark message-text">@ChatHelper.ConvertUrl(message)</div>
                                     <span class="time-left">@message.When.ToString()</span>
                                 </div>
                             }
@@ -289,12 +268,12 @@
                 ms.Seek(0, SeekOrigin.Begin);
                 await task1;
                 Console.WriteLine("######### CopyEnded");
-                string filePath = "TempFiles/" + $"{file.Name}-{Guid.NewGuid()}-{file.Type.Substring(1)}";
+                string filePath = "TempFiles/" + $"{file.Name}-{Guid.NewGuid()}-{Path.GetExtension(file.Name)}";
                 await _is3.UploadObjectAsync(ms, filePath);
                 string urlLink = _is3.GeneratePreSignedURL(filePath, false, file.Name);
                 Console.WriteLine("######### UploadedToS3");
 
-                _chatService.UploadImageMessage(urlLink);
+                _chatService.UploadImageMessage(urlLink, file.Name);
 
             }
 
